@@ -1,5 +1,7 @@
 #VERSION 0.8.4#
 
+ - added methods getSanitizeFilters() and getValidateFilters() to Peak_Filters
+
  - added abstract class Peak_Filters
 
  - renamed constants _VERSION_, _NAME_ and _DESCR_ to PK_VERSION, PK_NAME and PK_DESCR
